==> arduino/mkrwan1300-fw/Projects/Multi/Applications/LoRa/AT_Slave/src/mlm32l0xx_hw.c <==
#include "hw.h"
#include "radio.h"
#include "debug.h"
#include "vcom.h"
#include "stm32l0xx_hal_dma.h"
#include "stm32l0xx_hal_adc.h"
#define         ID1                                 (UID_BASE)
#define         ID2                                 (UID_BASE + 0x4)
#define         ID3                                 (UID_BASE + 0x14)
#define VREFINT_CAL       ((uint16_t *) ((uint32_t) 0x1FF80078))
#define LORAWAN_MAX_BAT   254
#define ADC_STAB_DELAY_US       ((uint32_t)1U)

uint8_t HW_GetBatteryLevel(void)
{
  uint8_t batteryLevel = 0;
  uint16_t measuredLevel = 0;
  uint32_t batteryLevelmV;

  measuredLevel = HW_AdcReadChannel(LL_ADC_CHANNEL_VREFINT);

  if (measuredLevel == 0)
  {
    batteryLevelmV = 0;
  }
  else
  {
    batteryLevelmV = (((uint32_t) VDDA_VREFINT_CAL * (*VREFINT_CAL)) / measuredLevel);
  }
  if (batteryLevelmV > VDD_BAT)
  {
    batteryLevel = LORAWAN_MAX_BAT;
  }
  else
  if (batteryLevelmV < VDD_MIN)
  {
    batteryLevel = 0;
  }
  else
  {
    batteryLevel = (((uint32_t) (batteryLevelmV - VDD_MIN) * LORAWAN_MAX_BAT) / (VDD_BAT - VDD_MIN));
  }
  return batteryLevel;
}

void HW_EnterStopMode(void)
{
  uint32_t tmpreg = 0U;

  BACKUP_PRIMASK();

  DISABLE_IRQ();

  HW_IoDeInit();

  /*clear wake up flag*/
  LL_PWR_ClearFlag_WU();

  /* Disable the UART Data Register not empty Interrupt */
  LL_LPUART_DisableIT_RXNE(UARTX);

  RESTORE_PRIMASK();

  /* Enter Stop Mode - is a LL implementatin of HAL_PWR_EnterSTOPMode(PWR_LOWPOWERREGULATOR_ON, PWR_STOPENTRY_WFI) */
  /* Select the regulator state in Stop mode ---------------------------------*/
  tmpreg = PWR->CR;

  /* Clear PDDS and LPDS bits */
  CLEAR_BIT(tmpreg, (PWR_CR_PDDS | PWR_CR_LPSDSR));

  /* Set LPSDSR bit according to PWR_Regulator value */
  SET_BIT(tmpreg, LL_PWR_REGU_LPMODES_LOW_POWER);

  /* Store the new value */
  PWR->CR = tmpreg;

  /* Set SLEEPDEEP bit of Cortex System Control Register */
  LL_LPM_EnableDeepSleep();

  /* Select Stop mode entry --------------------------------------------------*/
  __WFI();

  /* Reset SLEEPDEEP bit of Cortex System Control Register */
  LL_LPM_EnableSleep();
}

void HW_ExitStopMode(void)
{
  /* Disable IRQ while the MCU is not running on HSI */
  BACKUP_PRIMASK();
  DISABLE_IRQ();

  /* After wake-up from STOP reconfigure the system clock */
  /* Enable HSI */
  LL_RCC_HSI_Enable();

  /* Wait till HSI is ready */
  while (LL_RCC_HSI_IsReady() == RESET)
  {
    ;
  }

  /* Enable PLL */
  LL_RCC_PLL_Enable();
  /* Wait till PLL is ready */
  while (LL_RCC_PLL_IsReady() == RESET)
  {
    ;
  }

  /* Select PLL as system clock source */
  LL_RCC_SetSysClkSource(LL_RCC_SYS_CLKSOURCE_PLL);

  /* Wait till PLL is used as system clock source */
  while (LL_RCC_GetSysClkSource() != LL_RCC_SYS_CLKSOURCE_STATUS_PLL)
  {
    ;
  }

  /*initilizes the peripherals*/
  HW_IoInit();

  RESTORE_PRIMASK();
}

void HW_EnterSleepMode(void)
{
  /* Is an implementation of HAL_PWR_EnterSLEEPMode(PWR_MAINREGULATOR_ON, PWR_SLEEPENTRY_WFI) */
  uint32_t tmpreg = 0U;

  /* Select the regulator state in Sleep mode ---------------------------------*/
  tmpreg = PWR->CR;

  /* Clear PDDS and LPDS bits */
  CLEAR_BIT(tmpreg, (PWR_CR_PDDS | PWR_CR_LPSDSR));

  /* Set LPSDSR bit according to PWR_Regulator value */
  SET_BIT(tmpreg, LL_PWR_REGU_LPMODES_MAIN);

  /* Store the new value */
  PWR->CR = tmpreg;

  /* Clear SLEEPDEEP bit of Cortex System Control Register */
  LL_LPM_EnableSleep();

  /* Select SLEEP mode entry -------------------------------------------------*/
  __WFI();
}

static void HW_ADC_Init(void)
{
  /* Check the parameters */
  assert_param(IS_ADC_ALL_INSTANCE(adcinit_Instance));
  assert_param((adcinit_ClockPrescaler == LL_ADC_CLOCK_SYNC_PCLK_DIV1) ||
               (adcinit_ClockPrescaler == LL_ADC_CLOCK_SYNC_PCLK_DIV2) ||
               (adcinit_ClockPrescaler == LL_ADC_CLOCK_SYNC_PCLK_DIV4));
  assert_param((adcinit_Resolution == LL_ADC_RESOLUTION_12B) ||
               (adcinit_Resolution == LL_ADC_RESOLUTION_10B) ||
               (adcinit_Resolution == LL_ADC_RESOLUTION_8B) ||
               (adcinit_Resolution == LL_ADC_RESOLUTION_6B));
  assert_param((adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_1CYCLE_5) ||
               (adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_7CYCLES_5) ||
               (adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_13CYCLES_5) ||
               (adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_28CYCLES_5) ||
               (adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_41CYCLES_5) ||
               (adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_55CYCLES_5) ||
               (adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_71CYCLES_5) ||
               (adcinit_SamplingTime == LL_ADC_SAMPLINGTIME_239CYCLES_5));
  assert_param((adcinit_ScanConvMode == LL_ADC_REG_SEQ_SCAN_DIR_FORWARD) ||
               (adcinit_ScanConvMode == LL_ADC_REG_SEQ_SCAN_DIR_BACKWARD));
  assert_param((adcinit_DataAlign == LL_ADC_DATA_ALIGN_RIGHT) ||
               (adcinit_DataAlign == LL_ADC_DATA_ALIGN_LEFT));
  assert_param((adcinit_ContinuousConvMode == LL_ADC_REG_CONV_SINGLE) ||
               (adcinit_ContinuousConvMode == LL_ADC_REG_CONV_CONTINUOUS));
  assert_param(IS_FUNCTIONAL_STATE(adcinit_DiscontinuousConvMode));
  assert_param((adcinit_ExternalTrigConvEdge == 0) ||
               (adcinit_ExternalTrigConvEdge == LL_ADC_REG_TRIG_EXT_RISING) ||
               (adcinit_ExternalTrigConvEdge == LL_ADC_REG_TRIG_EXT_FALLING) ||
               (adcinit_ExternalTrigConvEdge == LL_ADC_REG_TRIG_EXT_RISINGFALLING));
  assert_param(adcinit_ExternalTrigConv == LL_ADC_REG_TRIG_SOFTWARE);
  /* note that DMA configuration should be LL_ADC_REG_DMA_TRANSFER_NONE,
     LL_ADC_REG_DMA_TRANSFER_LIMITED, or LL_ADC_REG_DMA_TRANSFER_UNLIMITED */
  assert_param((adcinit_DMAContinuousRequests == ADC_CFGR1_DMACFG));
  assert_param((adcinit_Overrun == LL_ADC_REG_OVR_DATA_PRESERVED) ||
               (adcinit_Overrun == LL_ADC_REG_OVR_DATA_OVERWRITTEN));
  assert_param((adcinit_LowPowerAutoWait == LL_ADC_LP_MODE_NONE) ||
               (adcinit_LowPowerAutoWait == LL_ADC_LP_AUTOWAIT));
  assert_param(adcinit_LowPowerFrequencyMode == LL_ADC_CLOCK_FREQ_MODE_LOW ||
               adcinit_LowPowerFrequencyMode == LL_ADC_CLOCK_FREQ_MODE_HIGH);
  assert_param((adcinit_LowPowerAutoPowerOff == LL_ADC_LP_MODE_NONE) ||
               (adcinit_LowPowerAutoPowerOff == LL_ADC_LP_AUTOPOWEROFF));
  assert_param(IS_FUNCTIONAL_STATE(adcinit_OversamplingMode));

  /* As prerequisite, into HAL_ADC_MspInit(), ADC clock must be configured    */
  /* at RCC top level depending on both possible clock sources:               */
  /* APB clock or HSI clock.                                                  */
  /* Refer to header of this file for more details on clock enabling procedure*/

  /* Actions performed only if ADC is coming from state reset:                */
  /* - Initialization of ADC MSP                                              */
  /* - ADC voltage regulator enable                                           */
  if (adc_state == HAL_ADC_STATE_RESET)
  {
    /* Init the low level hardware */
    /* no call to HAL_ADC_MspInit(); is performed as no action is required */
  }

  /* Configuration of ADC parameters if previous preliminary actions are      */
  /* correctly completed.                                                     */
  /* and if there is no conversion on going on regular group (ADC can be      */
  /* enabled anyway, in case of call of this function to update a parameter   */
  /* on the fly).                                                             */
  if ((READ_BIT(adc_state, HAL_ADC_STATE_ERROR_INTERNAL)) ||
      (LL_ADC_REG_IsConversionOngoing(adcinit_Instance) != RESET))
  {
    /* Update ADC state machine to error */
    SET_BIT(adc_state, HAL_ADC_STATE_ERROR_INTERNAL);

    return;
  }

  /* Set ADC state */
  CLEAR_BIT(adc_state, HAL_ADC_STATE_REG_BUSY);
  SET_BIT(adc_state, HAL_ADC_STATE_ERROR_INTERNAL);

  /* Parameters update conditioned to ADC state:                            */
  /* Parameters that can be updated only when ADC is disabled:              */
  /*  - ADC clock mode                                                      */
  /*  - ADC clock prescaler                                                 */
  /*  - ADC Resolution                                                      */
  if (!HW_ADC_IS_ENABLE())
  {
    /* Some parameters of this register are not reset, since they are set   */
    /* by other functions and must be kept in case of usage of this         */
    /* without needing to reconfigure all other ADC groups/channels         */
    /* parameters):                                                         */
    /*   - internal measurement paths: Vbat, temperature sensor, Vref       */
    /*     (set into HAL_ADC_ConfigChannel() )                              */

    /*
     * Configuration of ADC clock: clock source PCLK or asynchronous with
     * selectable prescaler - same as __HAL_ADC_CLOCK_PRESCALER()
     */
    assert_param((adcinit_ClockPrescaler == LL_ADC_CLOCK_SYNC_PCLK_DIV1) ||
                 (adcinit_ClockPrescaler == LL_ADC_CLOCK_SYNC_PCLK_DIV2) ||
                 (adcinit_ClockPrescaler == LL_ADC_CLOCK_SYNC_PCLK_DIV4));
    LL_ADC_SetClock(adcinit_Instance, adcinit_ClockPrescaler);

    /* Configuration of ADC:                                                */
    /*  - Resolution                                                        */
    LL_ADC_SetResolution(adcinit_Instance, adcinit_Resolution);
  }

  /* Set the Low Frequency mode */
  LL_ADC_SetCommonFrequencyMode(ADC, adcinit_LowPowerFrequencyMode);

  /* Enable voltage regulator (if disabled at this step) */
  if (!LL_ADC_IsInternalRegulatorEnabled(adcinit_Instance))
  {
    /* Set ADVREGEN bit */
    LL_ADC_EnableInternalRegulator(adcinit_Instance);

    /*
     * Note that this is not the original code which was:
     *    adcinit_Instance->CR |= ADC_CR_ADVREGEN;
     */
  }

  /* Configuration of ADC:                                                    */
  /*  - Resolution                                                            */
  /*  - Data alignment                                                        */
  /*  - Scan direction                                                        */
  /*  - External trigger to start conversion                                  */
  /*  - External trigger polarity                                             */
  /*  - Continuous conversion mode                                            */
  /*  - DMA continuous request                                                */
  /*  - Overrun                                                               */
  /*  - AutoDelay feature                                                     */
  /*  - Discontinuous mode                                                    */
  MODIFY_REG(adcinit_Instance->CFGR1,
             (ADC_CFGR1_ALIGN               |
              ADC_CFGR1_SCANDIR             |
              ADC_CFGR1_EXTSEL              |
              ADC_CFGR1_EXTEN               |
              ADC_CFGR1_CONT                |
              ADC_CFGR1_DMACFG              |
              ADC_CFGR1_OVRMOD              |
              ADC_CFGR1_AUTDLY              |
              ADC_CFGR1_AUTOFF              |
              ADC_CFGR1_DISCEN),
             (adcinit_DataAlign             |
              adcinit_ScanConvMode          |
              adcinit_ContinuousConvMode    |
              adcinit_DMAContinuousRequests |
              adcinit_Overrun               |
              adcinit_LowPowerAutoWait      |
              adcinit_LowPowerAutoPowerOff)
             );

  /* Enable external trigger if trigger selection is different of software  */
  /* start.                                                                 */
  /* Note: This configuration keeps the hardware feature of parameter       */
  /*       ExternalTrigConvEdge "trigger edge none" equivalent to           */
  /*       software start.                                                  */
  if (adcinit_ExternalTrigConv != LL_ADC_REG_TRIG_SOFTWARE)
  {
    LL_ADC_REG_SetTriggerSource(adcinit_Instance, adcinit_ExternalTrigConv);
    LL_ADC_REG_SetTriggerEdge(adcinit_Instance, adcinit_ExternalTrigConvEdge);
  }

  assert_param(adcinit_DiscontinuousConvMode != ENABLE);
  assert_param(adcinit_OversamplingMode != ENABLE);
  if (LL_ADC_GetOverSamplingScope(adcinit_Instance) != LL_ADC_OVS_DISABLE)
  {
    /* Disable OverSampling mode if needed */
    LL_ADC_SetOverSamplingScope(adcinit_Instance, LL_ADC_OVS_DISABLE);
  }

  /* Set the new sample time */
  LL_ADC_SetSamplingTimeCommonChannels(adcinit_Instance, adcinit_SamplingTime);

  /* Set the ADC state */
  CLEAR_BIT(adc_state, HAL_ADC_STATE_BUSY_INTERNAL);
  SET_BIT(adc_state, HAL_ADC_STATE_READY);
}

static void HW_AdcInit(void)
{
  if (AdcInitialized == RESET)
  {
    AdcInitialized = SET;

    LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_ADC1);
    HW_ADC_Init();
    LL_ADC_StartCalibration(adcinit_Instance);
    while (LL_ADC_IsCalibrationOnGoing(adcinit_Instance) == 0)
    {
      ;
    }
    LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_ADC1);
  }
}

static uint16_t HW_AdcReadChannel(uint32_t Channel)
{
  uint16_t adcData = 0;
  if (AdcInitialized == SET)
  {
    LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_ADC1);
    /* wait the the Vrefint used by adc is set */
    while (LL_PWR_IsActiveFlag_VREFINTRDY() == RESET)
    {
      ;
    }

    /*calibrate ADC if any calibraiton hardware*/
    LL_ADC_StartCalibration(adcinit_Instance);
    while (LL_ADC_IsCalibrationOnGoing(adcinit_Instance) == 0)
    {
      ;
    }

    /* Enable the ADC, but after few cycles once the calibration is completed */
    volatile int i = 32 * LL_ADC_DELAY_CALIB_ENABLE_ADC_CYCLES;
    while (i)
    {
      i--;
    }
    LL_ADC_Enable(adcinit_Instance);
    while (LL_ADC_IsActiveFlag_ADRDY(adcinit_Instance) == 0)
    {
      ;
    }

    /* Deselects all channels*/
    HW_ADC_DeselectChannel();

    /* configure adc channel */
    HW_ADC_SelectChannel(Channel);

    /* Start the conversion process */
    HW_ADC_Start();

    /* Wait for the end of conversion */
    HW_ADC_PollForConversion();

    /* Get the converted value of regular channel */
    adcData = LL_ADC_REG_ReadConversionData12(adcinit_Instance);

    /* Implementation of __HAL_ADC_DISABLE(__HANDLE__) */
    LL_ADC_Disable(adcinit_Instance);
    LL_ADC_ClearFlag_EOSMP(adcinit_Instance);
    LL_ADC_ClearFlag_ADRDY(adcinit_Instance);

    LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_ADC1);
  }
  return adcData;
}
